--- a/package.json
+++ b/package.json
@@ -4,10 +4,26 @@
   "license": "MIT",
   "description": "A setup for autoiq",
   "scripts": {
-    "start": "webpack-dev-server --inline --progress --port 8080",
-    "test": "karma start",
+    "clean": "rimraf node_modules doc dist && npm cache clean",
+    "clean-install": "npm run clean && npm install",
+    "clean-start": "npm run clean-install && npm start",
+    "server": "webpack-dev-server --inline --progress --port 8080",
+    "watch": "webpack --watch --progress --profile",
     "build": "rimraf dist && webpack --config config/webpack.prod.js --progress --profile --bail",
-    "preinstall": "npm i -g typescript typings",
+
+    "webdriver-update": "webdriver-manager update",
+    "webdriver-start": "webdriver-manager start",
+    
+    "lint": "tslint --force \"src/**/*.ts\"",
+    "e2e": "protractor",
+    "e2e-live": "protractor --elementExplorer",
+    "pretest": "npm run lint",
+    "test": "karma start",
+    "test-watch": "karma start --no-single-run --auto-watch",
+
+    "ci": "npm run e2e && npm run test",
+
+    "start": "npm run server",
     "postinstall": "typings install"
   },
   "license": "MIT",
@@ -27,11 +43,11 @@
   },
   "devDependencies": {
     "angular2-template-loader": "^0.4.0",
-     "autoprefixer": "^6.3.2",
+    "autoprefixer": "^6.3.2",
     "codelyzer": "0.0.26",
     "copy-webpack-plugin": "^3.0.0",
     "css-loader": "^0.23.1",
-    "sass-loader"
+    "sass-loader": "^4.0.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "html-loader": "^0.4.3",
@@ -40,17 +56,22 @@
     "jasmine-spec-reporter": "^2.4.0",
     "json-loader": "^0.5.3",
     "karma": "^0.13.22",
-    "karma-coverage": "^1.0.0",
     "karma-jasmine": "^0.3.8",
+    "karma-chrome-launcher": "^1.0.1",
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.7.0",
     "null-loader": "^0.1.1",
     "phantomjs-prebuilt": "^2.1.7",
+    "postcss-loader": "^0.9.1",
+    "protractor": "^3.1.1",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.5.2",
     "style-loader": "^0.13.1",
+    "ts-helpers": "^1.1.1",
     "ts-loader": "^0.8.1",
+    "tslint": "^3.4.0",
+    "tslint-loader": "^2.1.0",
     "typescript": "^1.8.10",
     "typings": "^1.0.4",
     "webpack": "^1.13.0",
