--- a/package.json
+++ b/package.json
@@ -10,23 +10,18 @@
     "server": "webpack-dev-server --inline --progress --port 8080",
     "watch": "webpack --watch --progress --profile",
     "build": "rimraf dist && webpack --config config/webpack.prod.js --progress --profile --bail",
-
     "webdriver-update": "webdriver-manager update",
     "webdriver-start": "webdriver-manager start",
-    
     "lint": "tslint --force \"src/**/*.ts\"",
     "e2e": "protractor",
     "e2e-live": "protractor --elementExplorer",
     "pretest": "npm run lint",
     "test": "karma start",
     "test-watch": "karma start --no-single-run --auto-watch",
-
     "ci": "npm run e2e && npm run test",
-
     "start": "npm run server",
     "postinstall": "typings install"
   },
-  "license": "MIT",
   "dependencies": {
     "@angular/common": "2.0.0-rc.4",
     "@angular/compiler": "2.0.0-rc.4",
@@ -36,6 +31,7 @@
     "@angular/platform-browser": "2.0.0-rc.4",
     "@angular/platform-browser-dynamic": "2.0.0-rc.4",
     "@angular/router": "3.0.0-beta.1",
+    "bootstrap": "^3.3.7",
     "core-js": "^2.4.0",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.6",
@@ -44,29 +40,33 @@
   "devDependencies": {
     "angular2-template-loader": "^0.4.0",
     "autoprefixer": "^6.3.2",
+    "bootstrap-sass": "^3.3.7",
+    "bootstrap-sass-loader": "^1.0.10",
     "codelyzer": "0.0.26",
     "copy-webpack-plugin": "^3.0.0",
     "css-loader": "^0.23.1",
-    "sass-loader": "^4.0.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.15.0",
     "jasmine-core": "^2.4.1",
     "jasmine-spec-reporter": "^2.4.0",
+    "jquery": "^3.1.0",
     "json-loader": "^0.5.3",
+    "json-server": "^0.8.17",
     "karma": "^0.13.22",
     "karma-jasmine": "^0.3.8",
-    "karma-chrome-launcher": "^1.0.1",
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.7.0",
+    "node-sass": "^3.8.0",
     "null-loader": "^0.1.1",
     "phantomjs-prebuilt": "^2.1.7",
     "postcss-loader": "^0.9.1",
     "protractor": "^3.1.1",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.5.2",
+    "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
     "ts-helpers": "^1.1.1",
     "ts-loader": "^0.8.1",
@@ -74,6 +74,7 @@
     "tslint-loader": "^2.1.0",
     "typescript": "^1.8.10",
     "typings": "^1.0.4",
+    "url-loader": "^0.5.7",
     "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1",
     "webpack-merge": "^0.14.0"
