--- a/package.json
+++ b/package.json
@@ -40,11 +40,8 @@
   "devDependencies": {
     "angular2-template-loader": "^0.4.0",
     "autoprefixer": "^6.3.2",
-    "bootstrap-sass": "^3.3.7",
-    "bootstrap-sass-loader": "^1.0.10",
     "codelyzer": "0.0.26",
     "copy-webpack-plugin": "^3.0.0",
-    "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "html-loader": "^0.4.3",
@@ -59,15 +56,19 @@
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.7.0",
-    "node-sass": "^3.8.0",
-    "null-loader": "^0.1.1",
     "phantomjs-prebuilt": "^2.1.7",
-    "postcss-loader": "^0.9.1",
     "protractor": "^3.1.1",
-    "raw-loader": "^0.5.1",
-    "rimraf": "^2.5.2",
+    "node-sass": "^3.8.0",
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
+    "bootstrap-loader": "^2.0.0-beta.3",
+    "bootstrap-sass": "^3.3.7",
+    "css-loader": "^0.23.1",
+    "postcss-loader": "^0.9.1",
+    "null-loader": "^0.1.1",
+    "raw-loader": "^0.5.1",
+    "resolve-url-loader": "^1.6.0",
+    "rimraf": "^2.5.2",
     "ts-helpers": "^1.1.1",
     "ts-loader": "^0.8.1",
     "tslint": "^3.4.0",
