--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "clean": "rimraf node_modules doc dist && npm cache clean",
     "clean-install": "npm run clean && npm install",
     "clean-start": "npm run clean-install && npm start",
-    "server": "webpack-dev-server --inline --progress --port 8080",
+    "server": "node prodServer",
     "watch": "webpack --watch --progress --profile",
     "build": "rimraf dist && webpack --config config/webpack.prod.js --progress --profile --bail",
     "webdriver-update": "webdriver-manager update",
@@ -19,7 +19,7 @@
     "test": "karma start",
     "test-watch": "karma start --no-single-run --auto-watch",
     "ci": "npm run e2e && npm run test",
-    "start": "npm run server",
+    "start": "webpack-dev-server --inline --progress --port 8080",
     "postinstall": "typings install"
   },
   "dependencies": {
@@ -35,7 +35,8 @@
     "core-js": "^2.4.0",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.6",
-    "zone.js": "0.6.12"
+    "zone.js": "0.6.12",
+    "express": "^4.13.3"
   },
   "devDependencies": {
     "angular2-template-loader": "^0.4.0",
@@ -61,7 +62,7 @@
     "node-sass": "^3.8.0",
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
-    "bootstrap-loader": "^2.0.0-beta.3",
+    "bootstrap-loader": "^1.1.0",
     "bootstrap-sass": "^3.3.7",
     "css-loader": "^0.23.1",
     "postcss-loader": "^0.9.1",
@@ -76,7 +77,7 @@
     "typescript": "^1.8.10",
     "typings": "^1.0.4",
     "url-loader": "^0.5.7",
-    "webpack": "^1.13.0",
+    "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1",
     "webpack-merge": "^0.14.0"
   }
