--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "license": "MIT",
   "description": "A setup for autoiq",
   "scripts": {
-    "clean": "rimraf node_modules doc dist && npm cache clean",
+    "clean": "rimraf node_modules dist && npm cache clean",
     "clean-install": "npm run clean && npm install",
     "clean-start": "npm run clean-install && npm start",
     "server": "node prodServer",
     "watch": "webpack --watch --progress --profile",
     "build": "rimraf dist && webpack --config config/webpack.prod.js --progress --profile --bail",
+    "build-serve": "npm run build && npm run server",
     "webdriver-update": "webdriver-manager update",
     "webdriver-start": "webdriver-manager start",
     "lint": "tslint --force \"src/**/*.ts\"",
