--- a/package.json
+++ b/package.json
@@ -33,10 +33,11 @@
     "@angular/router": "3.0.0-beta.1",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.0",
+    "express": "^4.13.3",
+    "opensans-npm-webfont": "0.0.2",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.6",
-    "zone.js": "0.6.12",
-    "express": "^4.13.3"
+    "zone.js": "0.6.12"
   },
   "devDependencies": {
     "angular2-template-loader": "^0.4.0",
