Modified scripts and added their description in README.md

--- a/package.json
+++ b/package.json
@@ -4,22 +4,21 @@
   "license": "MIT",
   "description": "A setup for autoiq",
   "scripts": {
-    "clean": "rimraf node_modules doc dist && npm cache clean",
-    "clean-install": "npm run clean && npm install",
-    "clean-start": "npm run clean-install && npm start",
-    "server": "node prodServer",
+    "clean": "rm -rf node_modules doc dist && npm cache clean",
+    "clean-start": "npm run clean && npm run clean && npm install && npm start",
     "watch": "webpack --watch --progress --profile",
-    "build": "rimraf dist && webpack --config config/webpack.prod.js --progress --profile --bail",
     "webdriver-update": "webdriver-manager update",
     "webdriver-start": "webdriver-manager start",
+    "build": "rm -rf dist && webpack --config config/webpack.prod.js --progress --profile --bail",
+    "test-build": "npm run pretest && npm run test && rm -rf dist && npm run build",
     "lint": "tslint --force \"src/**/*.ts\"",
     "e2e": "protractor",
-    "e2e-live": "protractor --elementExplorer",
     "pretest": "npm run lint",
     "test": "karma start",
-    "test-watch": "karma start --no-single-run --auto-watch",
-    "ci": "npm run e2e && npm run test",
+    "test-start": "npm run test && npm run start",
+    "complete-test": "npm run e2e && npm run test",
     "start": "webpack-dev-server --inline --progress --port 8080",
+    "clean-test-start": "npm run clean && npm install && npm run test-start",
     "postinstall": "typings install"
   },
   "dependencies": {
