--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "start": "webpack-dev-server --inline --progress --port 8080",
     "clean-test-start": "npm run clean && npm install && npm run test-start",
     "postinstall": "typings install"
+    "jserver":"json-server db.json",
+    "mock": "npm run jserver | npm start"
   },
   "dependencies": {
     "@angular/common": "2.0.0-rc.4",
