--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "complete-test": "npm run e2e && npm run test",
     "start": "webpack-dev-server --inline --progress --port 8080",
     "clean-test-start": "npm run clean && npm install && npm run test-start",
-    "postinstall": "typings install"
+    "postinstall": "typings install",
     "jserver":"json-server db.json",
     "mock": "npm run jserver | npm start"
   },
