--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "clean-install": "npm run clean && npm install",
 
     "build": "rm -rf dist && webpack --config config/webpack.prod.js --progress --profile --bail",
-    "test-build": "npm run lint && npm run test && npm run e2e && npm run build",
+    "test-build": "npm run lint && npm run test && npm run build",
     "test-start": "npm run test && npm start",
 
     "postinstall": "typings install"
