Modified loging page

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@angular/platform-browser-dynamic": "2.0.0-rc.4",
     "@angular/router": "3.0.0-beta.1",
     "bootstrap": "^3.3.7",
+    "bootswatch": "^3.3.7",
     "core-js": "^2.4.0",
     "opensans-npm-webfont": "0.0.2",
     "reflect-metadata": "0.1.2",
@@ -36,9 +37,11 @@
     "zone.js": "0.6.12"
   },
   "devDependencies": {
-    "express": "^4.13.3",
     "angular2-template-loader": "^0.4.0",
     "codelyzer": "0.0.26",
+    "copy-webpack-plugin": "^3.0.1",
+    "css-loader": "^0.23.1",
+    "express": "^4.13.3",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "html-loader": "^0.4.3",
@@ -52,13 +55,12 @@
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.7.0",
+    "node-sass": "^3.8.0",
+    "null-loader": "^0.1.1",
     "phantomjs-prebuilt": "^2.1.7",
     "protractor": "^3.1.1",
-    "node-sass": "^3.8.0",
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
-    "css-loader": "^0.23.1",
-    "null-loader": "^0.1.1",
     "ts-helpers": "^1.1.1",
     "ts-loader": "^0.8.1",
     "tslint": "^3.4.0",
